# Localization-with-Map-and-Obstacles

ssl_rssi_2D_mapAndObstacles/analysis-attenuationAndPathLossExponent/: analysis-attAndPLE.py  log_AttenuationAndPathLossExponent_air.txt  log_AttenuationAndPathLossExponent_brick.txt
ssl_rssi_2D_mapAndObstacles/analysis-costFunction/: analysis-convex.py  log_nodeResults.txt
ssl_rssi_2D_mapAndObstacles/analysis-mapAndObstacles/: analysis-map.py  log_mapOfConstants.txt  log_mapOfConstants_samples.txt
ssl_rssi_2D_mapAndObstacles/rssi-newtonsmethod/: Data_MapNodeSamples.txt  Data_MapNodeSamples_.txt  alice.C  observations.txt
ssl_rssi_2D_mapAndObstacles/rssi-newtonsmethod-shadowing/: observations.txt
ssl_rssi_2D_mapAndObstacles/step1-dataGenerator/: alice.C
ssl_rssi_2D_mapAndObstacles/tool-mapGenerator/: alice.C  observations_groundTruth.txt
ssl_rssi_2D_mapAndObstacles/tool-signalPowerGenerator/: Data_MapNodeSamples.txt  alice.C  observations.txt
ssl_rssi_2D_mapAndObstacles_signalPower/analysis-attenuationAndPathLossExponent/: log_AttenuationAndPathLossExponent_air.txt
ssl_rssi_2D_mapAndObstacles_signalPower/analysis-costFunction/: analysis-nodes.py  analysis-nodes2.py  log_costFunction.txt
ssl_rssi_2D_mapAndObstacles_signalPower/analysis-mapAndObstacles/: analysis-map-samples.py  analysis-map.py  log_mapOfConstants.txt  log_mapOfConstants_samples.txt
ssl_rssi_2D_mapAndObstacles_signalPower/analysis-observations/: analysis-attAndPLE.py  (+2 more)
ssl_rssi_2D_mapAndObstacles_signalPower/rssi-newtonsmethod-shadowing-singleNode/: CMakeLists.txt  alice.C  observations.txt
ssl_rssi_2D_mapAndObstacles_signalPower/rssi-newtonsmethod-shadowing-singleNode/include/: NewtonsCostFunction.hh
ssl_rssi_2D_mapAndObstacles_signalPower/rssi-newtonsmethod-shadowing-singleNode/src/: NewtonsCostFunction.cc  NewtonsOptimizationManager.cc  ToolSignalPowerGenerator.cc  UserOptimizationManager.cc
(+145 files in other folders)
